testdata/baselines/reference/compiler/sourceMapUnclosedBlock.errors.txt
sourceMapUnclosedBlock.tlua(1,2): error TS1005: '}' expected.


==== sourceMapUnclosedBlock.tlua (1 errors) ====
    {
     
!!! error TS1005: '}' expected.
!!! related TS1007 sourceMapUnclosedBlock.tlua:1:1: The parser expected to find a '}' to match the '{' token here.